--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <!-- The title of this page -->
-    <title>Add a title here</title>
+    <title>Pizza Rules!</title>
 
     <!-- Metadata for your site for search engines -->
-    <meta name='description' content='Add a description here'>
-    <meta name='keywords' content='Add keywords here (comma separated)'>
+    <meta name='description' content='Lynn realy loves pizza.'>
+    <meta name='keywords' content='lynn fisher, pizza, sandwiches'>
 
     <!-- This loads your CSS into the page -->
     <link rel='stylesheet' href=''>
@@ -29,7 +29,30 @@
   <!-- The body is where your page content goes. -->
   <body>
 
-
+    <header>
+      <h1>Caitlin Penny</h1>
+    </header>
+    <section>
+      <h2>Introduction</h2>
+      <p>Pizza is awesome!</p>
+      <p>I also like sandwiches. My favorite is grilled cheese with Kraft Singles. <a href='https:/twitter.com' target= '_blank'>
+      Follow Me On Twitter.</a></p>
+    </section>
+    <section>
+      <h2>Other things I like</h2>
+      <p>
+        <img src='images/hair.jpg' /> 
+      </p>
+      <ul>
+        <li>Diet Soda</li>
+        <li>Battlestar Galactica</li>
+        <li>Nicholas Cage</li>
+        <li>Disneyland</li>
+      </ul>
+    </section>
+    <footer>
+      <p>Copyright 2015 Caitlin Penny</p>
+    </footer> 
 
   </body> <!-- body closing tag -->
 
