--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <meta name='keywords' content='lynn fisher, pizza, sandwiches'>
 
     <!-- This loads your CSS into the page -->
-    <link rel='stylesheet' href=''>
+    <link rel='stylesheet' href='css/reset.css'>
+    <link rel='stylesheet' href='css/styles.css'>
+
 
     <!-- This loads your favicon (shows in the browser tab) -->
     <link rel='icon' type='image/png' href='images/favicon.png'>
@@ -30,25 +32,29 @@
   <body>
 
     <header>
-      <h1>Caitlin Penny</h1>
+      <h1>Caitlin Penny <span>Designer</span></h1>
     </header>
-    <section>
-      <h2>Introduction</h2>
-      <p>Pizza is awesome!</p>
-      <p>I also like sandwiches. My favorite is grilled cheese with Kraft Singles. <a href='https:/twitter.com' target= '_blank'>
+    <section class= 'intro'>
+      <div class='container'>
+        <h2>Introduction</h2>
+        <p>Pizza is awesome!</p>
+        <p>I also like sandwiches. My favorite is grilled cheese with Kraft Singles. <a href='https:/twitter.com' target= '_blank'>
       Follow Me On Twitter.</a></p>
+      </div>
     </section>
     <section>
-      <h2>Other things I like</h2>
-      <p>
-        <img src='images/hair.jpg' /> 
-      </p>
-      <ul>
-        <li>Diet Soda</li>
-        <li>Battlestar Galactica</li>
-        <li>Nicholas Cage</li>
-        <li>Disneyland</li>
-      </ul>
+      <div class= 'container'>
+        <h2>Other things I like</h2>
+        <p>
+          <img src='images/hair.jpg' /> 
+        </p>
+      </div>
+        <ul>
+          <li>Diet Soda</li>
+          <li>Battlestar Galactica</li>
+          <li>Nicolas Cage</li>
+          <li>Disneyland</li>
+        </ul>
     </section>
     <footer>
       <p>Copyright 2015 Caitlin Penny</p>
